# Service-Recovery-Scheduler

./: CMakeLists.txt  README.md
apps/: main.cpp  service_mail.cpp  service_main.cpp
docs/: TECHNICAL_DETAILS.md  TechnicalDetails.md
include/: scheduler.hpp
proto/: scheduler.proto
src/: scheduler.cpp
tests/: scheduler_test.cpp
